--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Battle of Card</string>
+    <string name="app_name">Clash of Cards</string>
     <string name="email_login">Email</string>
     <string name="login_button_login">LOGIN</string>
     <string name="password_registration">Password</string>
@@ -8,11 +8,11 @@
     <string name="surname">Surname</string>
     <string name="username">Username</string>
     <string name="register">REGISTER</string>
-    <string name="email">email</string>
-    <string name="password">password</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
     <string name="facebook_application_id">2142106609268508</string>
     <string name="fb_login_protocol_scheme">fb2142106609268508</string>
-    <string name="alredy_in">already have an account?</string>
+    <string name="alredy_in">Already have an account?</string>
     <string name="birth_date">Birth Date</string>
     <string name="select_date_button">Select</string>
 
