--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,20 +23,21 @@
 
 
 
-    <string name="onboarding_slide1_title">Create an account</string>
-    <string name="onboarding_slide1_subtitle">Connect with people around the world</string>
-    <string name="onboarding_slide1_desc">User will be able to give you live, chat and meet
-        with people nearby.</string>
+    <string name="onboarding_slide1_title"></string>
+    <string name="onboarding_slide1_subtitle"></string>
+    <string name="onboarding_slide1_desc">modalità 1vs1 - Scanna i tuoi nemici</string>
 
-    <string name="onboarding_slide2_title">Login to your account</string>
-    <string name="onboarding_slide2_subtitle">Let\'s build connection with new people</string>
-    <string name="onboarding_slide2_desc">Connect helps you locate the people around you who
-        are closest from your home.</string>
+    <string name="onboarding_slide2_title"></string>
+    <string name="onboarding_slide2_subtitle"></string>
+    <string name="onboarding_slide2_desc"> modalità </string>
 
-    <string name="onboarding_slide3_title">Login to your account</string>
-    <string name="onboarding_slide3_subtitle">Feel the happiness</string>
-    <string name="onboarding_slide3_desc">User will be able to give you live, chat and meet
-        with people nearby.</string>
+    <string name="onboarding_slide3_title"></string>
+    <string name="onboarding_slide3_subtitle"></string>
+    <string name="onboarding_slide3_desc">modalità</string>
+
+    <string name="onboarding_slide4_title"></string>
+    <string name="onboarding_slide4_subtitle"></string>
+    <string name="onboarding_slide4_desc">modalità</string>
 
     <string name="marketplace">Marketplace</string>
     <string name="deck">My Decks</string>
