--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="register" translatable="false">Register</string>
     <string name="login" translatable="false">Login</string>
     <string name="register_button" translatable="false">REGISTER</string>
-    <string name="email" translatable="false" >Email</string>
+    <string name="email" translatable="false">Email</string>
     <string name="password" translatable="false">Password</string>
     <string name="facebook_application_id" translatable="false">2142106609268508</string>
     <string name="fb_login_protocol_scheme" translatable="false">fb2142106609268508</string>
@@ -19,8 +19,6 @@
     <string name="birth_date" translatable="false">Birth Date</string>
     <string name="select_date_button" translatable="false">Select</string>
     <string name="todo" translatable="false">TODO</string>
-
-
 
 
     <string name="onboarding_slide1_title" translatable="false"></string>
@@ -32,7 +30,7 @@
     <string name="onboarding_slide2_desc" translatable="false"> modalità </string>
 
     <string name="onboarding_slide3_title" translatable="false"></string>
-    <string name="onboarding_slide3_subtitle" translatable="false" ></string>
+    <string name="onboarding_slide3_subtitle" translatable="false"></string>
     <string name="onboarding_slide3_desc" translatable="false">modalità</string>
 
     <string name="onboarding_slide4_title" translatable="false"></string>
@@ -59,5 +57,16 @@
     <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
     <string name="greater">Greater</string>
     <string name="lower">Lower</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="alina_smith">
+
+        Alina Smith
+    </string>
+    <string name="hi_i_m_alin">
+
+        Hi, I\'m Alina. I\u00E2\u0080\u0099m a UX/UI web and mobile designer with over 6 years of exp. in helping brands make it big.
+    </string>
 
 </resources>
