modified 1vs1 game backend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
 
         Hi, I\'m Alina. I\u00E2\u0080\u0099m a UX/UI web and mobile designer with over 6 years of exp. in helping brands make it big.
     </string>
+    <string name="waiting_for_n_an_opponent">Waiting for \n an opponent...</string>
 
 </resources>
